// Vitest Snapshot v1

exports[`rendering of Layout Component > checks if component renders in en-US 1`] = `
<DocumentFragment>
  <header
    class="usa-header usa-header--basic"
    data-testid="header"
    role="banner"
  >
    <div>
      <div>
        <section
          class="usa-banner"
          data-testid="govBanner"
        >
          <div
            class="usa-accordion"
          >
            <header
              class="usa-banner__header"
            >
              <div
                class="usa-banner__inner"
                data-testid="banner-header-inner-div"
              >
                <div
                  class="grid-col-auto"
                  data-testid="banner-header-flag-div"
                >
                  <img
                    alt="U.S. flag"
                    class="usa-banner__header-flag"
                    src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAEAAAAAsCAIAAABaPSmoAAAABGdBTUEAALGPC/xhBQAAADhlWElmTU0AKgAAAAgAAYdpAAQAAAABAAAAGgAAAAAAAqACAAQAAAABAAAAQKADAAQAAAABAAAALAAAAAA5W/rGAAABlElEQVRoBe2ZTU4DMQyFYzTLXoHOhhsAW24AR4GzFdb8iC2cABaoPUYXDFKlJt+TSJtZpFEkd+W4jhPnOX5Jxs4vV2H/M7O9GMI0JRkStbAOooef98V97L39pVVUh7yfZJOZTjhLJn1KHkBr3Abm3/rjNs5nvHqM8vrzLspZ/fVTtOH+GV9/kr6C5ClUYVFnueweAVuCByR01HLmtNgUNJ4XD9FqQjHn3vufHWK3nZCbTvcIeAAK9OlbQ0ByMUc3BZywBFdsyBXghIs354GDsPoeOLg8J/jTmMfcA6zTnAdrtthgL5E3yAPUix9xlEYDbWTvDJ5Cab3aSN0jMDAvpZajxhfdB2BPbnEeOJKZ3adQ9wGYvAsBLqnTBXqYyBvRC96FpK6j9lNPPyVy9wh4ACUw17Qxnn9qDlTLt6dQrZUt9ds9AvZ1Mx4NVr4boMrPrd+ZKwOPTjyaybxyfbtHwAMQnBs0nAcaLLoM6XtAlqNBw77BA3IHyJzXhRNyRIC+oI3Agj/3DMZx2ddTqEHWyJDdI/AHdI1y3pPhjf8AAAAASUVORK5CYII="
                  />
                </div>
                <div
                  class="grid-col-fill tablet:grid-col-auto"
                  data-testid="banner-header-grid-div"
                >
                  <p
                    class="usa-banner__header-text"
                  >
                    An official website of the United States government
                  </p>
                  <p
                    aria-hidden="true"
                    class="usa-banner__header-action"
                  >
                    Here’s how you know
                  </p>
                </div>
                <button
                  aria-controls="gov-banner"
                  aria-expanded="false"
                  class="usa-accordion__button usa-banner__button"
                  type="button"
                >
                  <span
                    class="usa-banner__button-text"
                  >
                    Here’s how you know
                  </span>
                </button>
              </div>
            </header>
            <div
              class="usa-banner__content usa-accordion__content"
              hidden=""
              id="gov-banner"
            >
              <div
                class="grid-row grid-gap-lg"
              >
                <div
                  class="usa-banner__guidance tablet:grid-col-6"
                >
                  <img
                    alt=""
                    aria-hidden="true"
                    class="usa-banner__icon usa-media-block__img"
                    role="img"
                    src="data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiPz48c3ZnIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyIgd2lkdGg9IjY0IiBoZWlnaHQ9IjY0IiB2aWV3Qm94PSIwIDAgNjQgNjQiPjx0aXRsZT5pY29uLWRvdC1nb3Y8L3RpdGxlPjxwYXRoIGZpbGw9IiMyMzc4QzMiIGZpbGwtcnVsZT0iZXZlbm9kZCIgZD0iTTMyIDBjMTcuNjczIDAgMzIgMTQuMzI3IDMyIDMyIDAgMTcuNjczLTE0LjMyNyAzMi0zMiAzMkMxNC4zMjcgNjQgMCA0OS42NzMgMCAzMiAwIDE0LjMyNyAxNC4zMjcgMCAzMiAwem0wIDEuMjA4QzE0Ljk5NCAxLjIwOCAxLjIwOCAxNC45OTQgMS4yMDggMzJTMTQuOTk0IDYyLjc5MiAzMiA2Mi43OTIgNjIuNzkyIDQ5LjAwNiA2Mi43OTIgMzIgNDkuMDA2IDEuMjA4IDMyIDEuMjA4em0xMC41OSAzOC44NThhLjg1Ny44NTcgMCAwIDEgLjg4Mi44MjJ2MS42NDJIMTguODg2di0xLjY0MmEuODU3Ljg1NyAwIDAgMSAuODgyLS44MjJINDIuNTl6TTI1LjQ0MyAyNy43NzR2OS44MjloMS42NDJ2LTkuODNoMy4yNzN2OS44M0gzMnYtOS44M2gzLjI3MnY5LjgzaDEuNjQzdi05LjgzaDMuMjcydjkuODNoLjc2YS44NTcuODU3IDAgMCAxIC44ODIuODIxdi44MjFoLTIxLjN2LS44MDlhLjg1Ny44NTcgMCAwIDEgLjg4LS44MmguNzYydi05Ljg0MmgzLjI3MnptNS43MzYtOC4xODhsMTIuMjkzIDQuOTE1djEuNjQyaC0xLjYzYS44NTcuODU3IDAgMCAxLS44ODIuODIySDIxLjQxYS44NTcuODU3IDAgMCAxLS44ODItLjgyMmgtMS42NDJ2LTEuNjQybDEyLjI5My00LjkxNXoiLz48L3N2Zz4="
                  />
                  <div
                    class="usa-media-block__body"
                  >
                    <p>
                      <strong>
                        Official websites use .gov
                      </strong>
                      <br />
                      A 
                      <strong>
                        .gov
                      </strong>
                       website belongs to an official government organization in the United States.
                    </p>
                  </div>
                </div>
                <div
                  class="usa-banner__guidance tablet:grid-col-6"
                >
                  <img
                    alt=""
                    aria-hidden="true"
                    class="usa-banner__icon usa-media-block__img"
                    role="img"
                    src="data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiPz48c3ZnIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyIgd2lkdGg9IjY0IiBoZWlnaHQ9IjY0IiB2aWV3Qm94PSIwIDAgNjQgNjQiPjx0aXRsZT5pY29uLWh0dHBzPC90aXRsZT48cGF0aCBmaWxsPSIjNzE5RjJBIiBmaWxsLXJ1bGU9ImV2ZW5vZGQiIGQ9Ik0zMiAwYzE3LjY3MyAwIDMyIDE0LjMyNyAzMiAzMiAwIDE3LjY3My0xNC4zMjcgMzItMzIgMzJDMTQuMzI3IDY0IDAgNDkuNjczIDAgMzIgMCAxNC4zMjcgMTQuMzI3IDAgMzIgMHptMCAxLjIwOEMxNC45OTQgMS4yMDggMS4yMDggMTQuOTk0IDEuMjA4IDMyUzE0Ljk5NCA2Mi43OTIgMzIgNjIuNzkyIDYyLjc5MiA0OS4wMDYgNjIuNzkyIDMyIDQ5LjAwNiAxLjIwOCAzMiAxLjIwOHptMCAxOC44ODZhNy4yNDUgNy4yNDUgMCAwIDEgNy4yNDUgNy4yNDV2My4xMDNoLjUyYy44NiAwIDEuNTU3LjY5OCAxLjU1NyAxLjU1OHY5LjMyMmMwIC44Ni0uNjk3IDEuNTU4LTEuNTU3IDEuNTU4aC0xNS41M2MtLjg2IDAtMS41NTctLjY5Ny0xLjU1Ny0xLjU1OFYzMmMwLS44Ni42OTctMS41NTggMS41NTctMS41NThoLjUyVjI3LjM0QTcuMjQ1IDcuMjQ1IDAgMCAxIDMyIDIwLjA5NHptMCAzLjEwM2E0LjE0MiA0LjE0MiAwIDAgMC00LjE0MiA0LjE0MnYzLjEwM2g4LjI4NFYyNy4zNEE0LjE0MiA0LjE0MiAwIDAgMCAzMiAyMy4xOTd6Ii8+PC9zdmc+"
                  />
                  <div
                    class="usa-media-block__body"
                  >
                    <p>
                      <strong>
                        Secure .gov websites use HTTPS
                      </strong>
                      <br />
                      A 
                      <strong>
                        lock ( 
                        <span
                          class="icon-lock"
                        >
                          <svg
                            aria-labelledby="banner-lock-title banner-lock-description"
                            class="usa-banner__lock-image"
                            focusable="false"
                            height="64"
                            role="img"
                            viewBox="0 0 52 64"
                            width="52"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <title
                              id="banner-lock-title"
                            >
                              Lock
                            </title>
                            <desc
                              id="banner-lock-description"
                            >
                              A locked padlock
                            </desc>
                            <path
                              d="M26 0c10.493 0 19 8.507 19 19v9h3a4 4 0 0 1 4 4v28a4 4 0 0 1-4 4H4a4 4 0 0 1-4-4V32a4 4 0 0 1 4-4h3v-9C7 8.507 15.507 0 26 0zm0 8c-5.979 0-10.843 4.77-10.996 10.712L15 19v9h22v-9c0-6.075-4.925-11-11-11z"
                              fill="#000000"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                         )
                      </strong>
                       or 
                      <strong>
                        https://
                      </strong>
                       means you’ve safely connected to the .gov website. Share sensitive information only on official, secure websites.
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </section>
        <nav>
          <ul />
        </nav>
      </div>
    </div>
    <div
      class="grid-container-desktop-lg"
      data-testid="gridContainer"
    >
      <div
        class="grid-row"
        data-testid="grid"
      >
        <div
          class="grid-col-1"
          data-testid="grid"
        >
          <a
            aria-current="page"
            class="active"
            href="/"
          >
            <img
              alt="[object Object]"
              src="/static/images/usds-logo.png"
            />
          </a>
        </div>
        <div
          class="grid-col-6"
          data-testid="grid"
        >
          <a
            aria-current="page"
            class="remove-link-style active"
            href="/"
          >
            <div>
              Your logo title goes here
            </div>
          </a>
        </div>
        <div
          class="grid-col-fill"
          data-testid="grid"
        >
          <button
            class="usa-menu-btn"
            data-testid="navMenuButton"
            type="button"
          >
            Menu
          </button>
          <nav
            class="usa-nav primary-nav"
          >
            <button
              class="usa-nav__close"
              data-testid="navCloseButton"
              type="button"
            >
              <img
                alt="close"
                src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIyNCIgaGVpZ2h0PSIyNCIgdmlld0JveD0iMCAwIDI0IDI0Ij48cGF0aCBkPSJNMTkgNi40MSAxNy41OSA1IDEyIDEwLjU5IDYuNDEgNSA1IDYuNDEgMTAuNTkgMTIgNSAxNy41OSA2LjQxIDE5IDEyIDEzLjQxIDE3LjU5IDE5IDE5IDE3LjU5IDEzLjQxIDEyeiIvPjwvc3ZnPg=="
              />
            </button>
            <ul
              class="usa-nav__primary usa-accordion"
            >
              <li
                class="usa-nav__primary-item"
              >
                <a
                  aria-current="page"
                  class="usa-current"
                  href="/"
                >
                  First page
                </a>
              </li>
              <li
                class="usa-nav__primary-item"
              >
                <a
                  href="/second-page"
                >
                  Second page
                </a>
              </li>
              <li
                class="usa-nav__primary-item"
              >
                <a
                  href="/third-page"
                >
                  Third page
                </a>
              </li>
            </ul>
          </nav>
        </div>
      </div>
    </div>
  </header>
  <main
    id="main-content"
  >
    <h1>
      Test
    </h1>
  </main>
</DocumentFragment>
`;

exports[`rendering of Layout Component > checks if component renders in es-MX 1`] = `
<DocumentFragment>
  <header
    class="usa-header usa-header--basic"
    data-testid="header"
    role="banner"
  >
    <div>
      <div>
        <section
          class="usa-banner"
          data-testid="govBanner"
        >
          <div
            class="usa-accordion"
          >
            <header
              class="usa-banner__header"
            >
              <div
                class="usa-banner__inner"
                data-testid="banner-header-inner-div"
              >
                <div
                  class="grid-col-auto"
                  data-testid="banner-header-flag-div"
                >
                  <img
                    alt="U.S. flag"
                    class="usa-banner__header-flag"
                    src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAEAAAAAsCAIAAABaPSmoAAAABGdBTUEAALGPC/xhBQAAADhlWElmTU0AKgAAAAgAAYdpAAQAAAABAAAAGgAAAAAAAqACAAQAAAABAAAAQKADAAQAAAABAAAALAAAAAA5W/rGAAABlElEQVRoBe2ZTU4DMQyFYzTLXoHOhhsAW24AR4GzFdb8iC2cABaoPUYXDFKlJt+TSJtZpFEkd+W4jhPnOX5Jxs4vV2H/M7O9GMI0JRkStbAOooef98V97L39pVVUh7yfZJOZTjhLJn1KHkBr3Abm3/rjNs5nvHqM8vrzLspZ/fVTtOH+GV9/kr6C5ClUYVFnueweAVuCByR01HLmtNgUNJ4XD9FqQjHn3vufHWK3nZCbTvcIeAAK9OlbQ0ByMUc3BZywBFdsyBXghIs354GDsPoeOLg8J/jTmMfcA6zTnAdrtthgL5E3yAPUix9xlEYDbWTvDJ5Cab3aSN0jMDAvpZajxhfdB2BPbnEeOJKZ3adQ9wGYvAsBLqnTBXqYyBvRC96FpK6j9lNPPyVy9wh4ACUw17Qxnn9qDlTLt6dQrZUt9ds9AvZ1Mx4NVr4boMrPrd+ZKwOPTjyaybxyfbtHwAMQnBs0nAcaLLoM6XtAlqNBw77BA3IHyJzXhRNyRIC+oI3Agj/3DMZx2ddTqEHWyJDdI/AHdI1y3pPhjf8AAAAASUVORK5CYII="
                  />
                </div>
                <div
                  class="grid-col-fill tablet:grid-col-auto"
                  data-testid="banner-header-grid-div"
                >
                  <p
                    class="usa-banner__header-text"
                  >
                    Un sitio oficial del Gobierno de Estados Unidos
                  </p>
                  <p
                    aria-hidden="true"
                    class="usa-banner__header-action"
                  >
                    Así es como usted puede verificarlo
                  </p>
                </div>
                <button
                  aria-controls="gov-banner"
                  aria-expanded="false"
                  class="usa-accordion__button usa-banner__button"
                  type="button"
                >
                  <span
                    class="usa-banner__button-text"
                  >
                    Así es como usted puede verificarlo
                  </span>
                </button>
              </div>
            </header>
            <div
              class="usa-banner__content usa-accordion__content"
              hidden=""
              id="gov-banner"
            >
              <div
                class="grid-row grid-gap-lg"
              >
                <div
                  class="usa-banner__guidance tablet:grid-col-6"
                >
                  <img
                    alt=""
                    aria-hidden="true"
                    class="usa-banner__icon usa-media-block__img"
                    role="img"
                    src="data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiPz48c3ZnIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyIgd2lkdGg9IjY0IiBoZWlnaHQ9IjY0IiB2aWV3Qm94PSIwIDAgNjQgNjQiPjx0aXRsZT5pY29uLWRvdC1nb3Y8L3RpdGxlPjxwYXRoIGZpbGw9IiMyMzc4QzMiIGZpbGwtcnVsZT0iZXZlbm9kZCIgZD0iTTMyIDBjMTcuNjczIDAgMzIgMTQuMzI3IDMyIDMyIDAgMTcuNjczLTE0LjMyNyAzMi0zMiAzMkMxNC4zMjcgNjQgMCA0OS42NzMgMCAzMiAwIDE0LjMyNyAxNC4zMjcgMCAzMiAwem0wIDEuMjA4QzE0Ljk5NCAxLjIwOCAxLjIwOCAxNC45OTQgMS4yMDggMzJTMTQuOTk0IDYyLjc5MiAzMiA2Mi43OTIgNjIuNzkyIDQ5LjAwNiA2Mi43OTIgMzIgNDkuMDA2IDEuMjA4IDMyIDEuMjA4em0xMC41OSAzOC44NThhLjg1Ny44NTcgMCAwIDEgLjg4Mi44MjJ2MS42NDJIMTguODg2di0xLjY0MmEuODU3Ljg1NyAwIDAgMSAuODgyLS44MjJINDIuNTl6TTI1LjQ0MyAyNy43NzR2OS44MjloMS42NDJ2LTkuODNoMy4yNzN2OS44M0gzMnYtOS44M2gzLjI3MnY5LjgzaDEuNjQzdi05LjgzaDMuMjcydjkuODNoLjc2YS44NTcuODU3IDAgMCAxIC44ODIuODIxdi44MjFoLTIxLjN2LS44MDlhLjg1Ny44NTcgMCAwIDEgLjg4LS44MmguNzYydi05Ljg0MmgzLjI3MnptNS43MzYtOC4xODhsMTIuMjkzIDQuOTE1djEuNjQyaC0xLjYzYS44NTcuODU3IDAgMCAxLS44ODIuODIySDIxLjQxYS44NTcuODU3IDAgMCAxLS44ODItLjgyMmgtMS42NDJ2LTEuNjQybDEyLjI5My00LjkxNXoiLz48L3N2Zz4="
                  />
                  <div
                    class="usa-media-block__body"
                  >
                    <p>
                      <strong>
                        Los sitios web oficiales usan .gov
                      </strong>
                      <br />
                      Un sitio web 
                      <strong>
                        .gov
                      </strong>
                       pertenece a una organización oficial del Gobierno de Estados Unidos.
                    </p>
                  </div>
                </div>
                <div
                  class="usa-banner__guidance tablet:grid-col-6"
                >
                  <img
                    alt=""
                    aria-hidden="true"
                    class="usa-banner__icon usa-media-block__img"
                    role="img"
                    src="data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiPz48c3ZnIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyIgd2lkdGg9IjY0IiBoZWlnaHQ9IjY0IiB2aWV3Qm94PSIwIDAgNjQgNjQiPjx0aXRsZT5pY29uLWh0dHBzPC90aXRsZT48cGF0aCBmaWxsPSIjNzE5RjJBIiBmaWxsLXJ1bGU9ImV2ZW5vZGQiIGQ9Ik0zMiAwYzE3LjY3MyAwIDMyIDE0LjMyNyAzMiAzMiAwIDE3LjY3My0xNC4zMjcgMzItMzIgMzJDMTQuMzI3IDY0IDAgNDkuNjczIDAgMzIgMCAxNC4zMjcgMTQuMzI3IDAgMzIgMHptMCAxLjIwOEMxNC45OTQgMS4yMDggMS4yMDggMTQuOTk0IDEuMjA4IDMyUzE0Ljk5NCA2Mi43OTIgMzIgNjIuNzkyIDYyLjc5MiA0OS4wMDYgNjIuNzkyIDMyIDQ5LjAwNiAxLjIwOCAzMiAxLjIwOHptMCAxOC44ODZhNy4yNDUgNy4yNDUgMCAwIDEgNy4yNDUgNy4yNDV2My4xMDNoLjUyYy44NiAwIDEuNTU3LjY5OCAxLjU1NyAxLjU1OHY5LjMyMmMwIC44Ni0uNjk3IDEuNTU4LTEuNTU3IDEuNTU4aC0xNS41M2MtLjg2IDAtMS41NTctLjY5Ny0xLjU1Ny0xLjU1OFYzMmMwLS44Ni42OTctMS41NTggMS41NTctMS41NThoLjUyVjI3LjM0QTcuMjQ1IDcuMjQ1IDAgMCAxIDMyIDIwLjA5NHptMCAzLjEwM2E0LjE0MiA0LjE0MiAwIDAgMC00LjE0MiA0LjE0MnYzLjEwM2g4LjI4NFYyNy4zNEE0LjE0MiA0LjE0MiAwIDAgMCAzMiAyMy4xOTd6Ii8+PC9zdmc+"
                  />
                  <div
                    class="usa-media-block__body"
                  >
                    <p>
                      <strong>
                        Los sitios web seguros .gov usan HTTPS
                      </strong>
                      <br />
                      Un 
                      <strong>
                        candado ( 
                        <span
                          class="icon-lock"
                        >
                          <svg
                            aria-labelledby="banner-lock-title banner-lock-description"
                            class="usa-banner__lock-image"
                            focusable="false"
                            height="64"
                            role="img"
                            viewBox="0 0 52 64"
                            width="52"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <title
                              id="banner-lock-title"
                            >
                              Lock
                            </title>
                            <desc
                              id="banner-lock-description"
                            >
                              A locked padlock
                            </desc>
                            <path
                              d="M26 0c10.493 0 19 8.507 19 19v9h3a4 4 0 0 1 4 4v28a4 4 0 0 1-4 4H4a4 4 0 0 1-4-4V32a4 4 0 0 1 4-4h3v-9C7 8.507 15.507 0 26 0zm0 8c-5.979 0-10.843 4.77-10.996 10.712L15 19v9h22v-9c0-6.075-4.925-11-11-11z"
                              fill="#000000"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                         )
                      </strong>
                       o 
                      <strong>
                        https://
                      </strong>
                       significa que usted se conectó de forma segura a un sitio web .gov. Comparta información sensible sólo en sitios web oficiales y seguros.
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </section>
        <nav>
          <ul />
        </nav>
      </div>
    </div>
    <div
      class="grid-container-desktop-lg"
      data-testid="gridContainer"
    >
      <div
        class="grid-row"
        data-testid="grid"
      >
        <div
          class="grid-col-1"
          data-testid="grid"
        >
          <a
            aria-current="page"
            class="active"
            href="/"
          >
            <img
              alt="[object Object]"
              src="/static/images/usds-logo.png"
            />
          </a>
        </div>
        <div
          class="grid-col-6"
          data-testid="grid"
        >
          <a
            aria-current="page"
            class="remove-link-style active"
            href="/"
          >
            <div>
              Your logo title goes here
            </div>
          </a>
        </div>
        <div
          class="grid-col-fill"
          data-testid="grid"
        >
          <button
            class="usa-menu-btn"
            data-testid="navMenuButton"
            type="button"
          >
            Menu
          </button>
          <nav
            class="usa-nav primary-nav"
          >
            <button
              class="usa-nav__close"
              data-testid="navCloseButton"
              type="button"
            >
              <img
                alt="close"
                src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIyNCIgaGVpZ2h0PSIyNCIgdmlld0JveD0iMCAwIDI0IDI0Ij48cGF0aCBkPSJNMTkgNi40MSAxNy41OSA1IDEyIDEwLjU5IDYuNDEgNSA1IDYuNDEgMTAuNTkgMTIgNSAxNy41OSA2LjQxIDE5IDEyIDEzLjQxIDE3LjU5IDE5IDE5IDE3LjU5IDEzLjQxIDEyeiIvPjwvc3ZnPg=="
              />
            </button>
            <ul
              class="usa-nav__primary usa-accordion"
            >
              <li
                class="usa-nav__primary-item"
              >
                <a
                  aria-current="page"
                  class="usa-current"
                  href="/"
                >
                  First page
                </a>
              </li>
              <li
                class="usa-nav__primary-item"
              >
                <a
                  href="/second-page"
                >
                  Second page
                </a>
              </li>
              <li
                class="usa-nav__primary-item"
              >
                <a
                  href="/third-page"
                >
                  Third page
                </a>
              </li>
            </ul>
          </nav>
        </div>
      </div>
    </div>
  </header>
  <main
    id="main-content"
  >
    <h1>
      Test
    </h1>
  </main>
</DocumentFragment>
`;
